Name:                diagrams-povray
Version:             0.1
Synopsis:            Persistence Of Vision raytracer backend for diagrams EDSL
Description:         XXX write me
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-povray/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC ==7.0.3
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-povray.git

Library
  Exposed-modules:   Diagrams.Backend.POVRay
  Other-Modules:     Diagrams.Backend.POVRay.Syntax
  Hs-source-dirs:    src
  Build-depends:     base >= 4.2 && < 4.7,
                     diagrams-core >= 1.0 && < 1.1,
                     diagrams-lib >= 1.0 && < 1.1,
                     pretty >= 1.0.1.2 && < 1.2,
                     vector-space >= 0.8 && < 0.9,
                     colour >= 2.3 && < 2.4
  Default-language:  Haskell2010
