name:                diagrams-povray
version:             2.0
synopsis:            Persistence Of Vision raytracer backend for diagrams EDSL
description:         This package provides a modular backend for rendering 3D
                     diagrams created with the diagrams EDSL to the input 
                     format of the POV-Ray raytracer.  The main point of entry
                      is `doRender`, which returns a string in POV-Ray format.
    
homepage:            http://projects.haskell.org/diagrams
license:             BSD3
license-file:        LICENSE
author:              Brent Yorgey
maintainer:          diagrams-discuss@googlegroups.com
bug-reports:         http://github.com/diagrams/diagrams-povray/issues
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.2
source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-povray.git

library
  exposed-modules:
    Diagrams.Backend.POVRay
    Diagrams.Backend.POVRay.Run
    Diagrams.Backend.POVRay.Syntax
  hs-source-dirs:    src
  build-depends:     base,
                     diagrams,
                     geometry,
                     containers,
                     process,
                     pretty,
                     colour,
                     lens
  default-language:  Haskell2010
